<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal"
                android:paddingStart="@dimen/common_spacing"
                android:paddingEnd="@dimen/common_spacing">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/common_spacing"
                        android:text="@string/sign_up"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/title_size" />

                    <ImageView
                        android:id="@+id/photo"
                        android:layout_width="@dimen/sign_up_avatar_size"
                        android:layout_height="@dimen/sign_up_avatar_size"
                        android:layout_gravity="center_horizontal"
                        android:contentDescription="@string/description_photo"
                        android:src="@drawable/ic_camera_24dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/removePhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|bottom"
                        android:text="@string/remove" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/pickPhoto"
                            style="@style/Widget.AppTheme.IconButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/description_select_photo"
                            android:padding="@dimen/common_spacing"
                            app:icon="@drawable/ic_photo_24dp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/takePhoto"
                            style="@style/Widget.AppTheme.IconButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/description_take_photo"
                            android:padding="@dimen/common_spacing"
                            app:icon="@drawable/ic_camera_24dp" />
                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/common_spacing"
                        android:hint="@string/login">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/common_spacing"
                        android:hint="@string/name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"

                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/common_spacing"
                        android:hint="@string/password"
                        app:endIconMode="password_toggle"
                        android:inputType="text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/common_spacing"
                        android:hint="@string/confirm_password"
                        app:endIconMode="password_toggle"
                        android:inputType="text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/submit"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submit" />

                </LinearLayout>


            </RelativeLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

